# fastapi-uv-starter

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
